[package]
name = "seren"
version = "0.1.0"
edition = "2021"
authors = [ "PwnWriter < hey@pwnwriter.xyz >" ]
description = "📦 An independent package manager for the nix"
readme = "README.md"
repository = "https://github.com/pwnwriter/seren"
homepage = "https://github.com/pwnwriter/seren.git"
license = "MIT"
keywords = ["package-manager", "ctf-tool-download", "pentesting", "pkgs"]
categories = ["accessibility", "web-programming", "command-line" ]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.20", default-features = false, features = ["rustls-tls"] }
spinoff = { version = "0.7.0", features = ["dots", "arc", "line"] }
clap = { version = "4.4.8", features = ["string", "derive"] }
serde = { version = "1.0.192", features = ["derive"] }
tokio = { version = "1.34.0", features = ["full"] }
anyhow = "1.0.75"
colored = "2.0.4"
toml = "0.8.8"
lazy_static = "1.4.0"
blake3 = "1.5.0"
temp-dir = "0.1.11"

[profile.dev]
opt-level = 0
debug = true
panic = "abort"

[profile.test]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
panic = "unwind"
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
debug = false


