[package]
name = "hysp"
version = "0.1.1"
edition = "2021"
authors = [ "PwnWriter < hey@pwnwriter.xyz >" ]
description = "📦 An independent package manager for the *nix Operating system"
readme = "README.md"
repository = "https://github.com/pwnwriter/hysp"
homepage = "https://github.com/pwnwriter/hysp.git"
license = "MIT"
keywords = ["package-manager", "ctf-tool-download", "pentesting", "pkgs"]
categories = ["accessibility", "web-programming", "command-line" ]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.20", default-features = false, features = ["rustls-tls"] }
spinoff = { version = "0.8.0", features = ["dots", "arc", "line"] }
clap = { version = "4.4.8", features = ["string", "derive"] }
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.34.0", features = ["full"] }
anyhow = "1.0.75"
colored = "2.0.4"
toml = "0.8.8"
columns = "0.1.0"
dirs = "5.0.1"
sha2 = "0.10.8"


[profile.dev]
opt-level = 0
debug = true
panic = "abort"

[profile.test]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
panic = "unwind"
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
debug = false

